Change maven compiler target to 1.8